# turkeydpi

./: .gitignore  Cargo.toml  README.md  config.example.toml
TurkeyDPI-App/: Package.swift  build.sh
TurkeyDPI-App/Resources/: Info.plist
TurkeyDPI-App/Sources/: TurkeyDPIApp.swift
TurkeyDPI-App/Sources/Models/: AppState.swift  SystemProxy.swift
TurkeyDPI-App/Sources/Views/: ContainerDetailView.swift  ContentView.swift  CreateContainerSheet.swift  MenuBarView.swift
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  proxy.rs  traits.rs  transparent.rs  tun.rs
cli/: Cargo.toml
cli/src/: main.rs
control/: Cargo.toml
control/src/: error.rs  lib.rs  messages.rs  server.rs
engine/: Cargo.toml
engine/src/: bypass.rs  config.rs  dns.rs  error.rs  flow.rs  lib.rs  pipeline.rs  stats.rs  tls.rs
engine/src/transform/: decoy.rs  fragment.rs  header.rs  jitter.rs  mod.rs  padding.rs  resegment.rs
engine/tests/: integration_tests.rs
