[package]
name = "turkeydpi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TurkeyDPI CLI"

[[bin]]
name = "turkeydpi"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
engine = { workspace = true }
backend = { workspace = true }
control = { workspace = true }