[package]
name = "control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TurkeyDPI IPC Control Plane"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

engine = { workspace = true }
backend = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
