[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TurkeyDPI Engine"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }
ipnet = { workspace = true }
native-tls = "0.2.14"
tokio-native-tls = "0.3.1"

[dev-dependencies]
tokio-test = { workspace = true }
